[tool.poetry]
name = "Hyades"
version = "0.1.0"
description = "Network Automation Inventory"
authors = ["Renato Almeida de Oliveira <renato.almeida.oliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapli = {extras = ["ssh2"], version = "^2021.7.30"}
asyncssh = "^2.7.2"
scrapli-community = "^2021.7.30"
pyats = "^21.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
